# Target_Terminator

./: .gitignore  __init__.py  agent.py  environment.py  environment.yml  human_control.py  human_rendering.py  main.py  make.py  pyproject.toml  readme.md  requirements.txt  settings.py  target.py  terminator.ipynb
agents/: __init__.py  agent.py  dqn.py  memory.py  policy.py  transition.py
agents/models/: dqn.pth
config/: default_env.yaml  default_target.yaml  dickbutt.yaml  fly.yaml  i-16_falangist.yaml  urinal.yaml
config/validation_templates/: __init__.py  environment_template.py  plane_template.py  target_template.py
environment/: base_env.py  env.py  human_control.py  human_control_env.py  human_rendering.py  human_rendering_env.py
simulation/: agent.py  aircraft.py  airplanes.py  bullet.py  bullets.py  entities.py  ground.py  plane.py  target.py  targets.py
simulation/debug/: debug_game_loop.py  debug_game_loop_headless.py  debug_main.py  headless_2.py
simulation/deprecated/: ground.py  plane.py
utils/: __init__.py  angles.py  collision.py  create_path_plots.py  numpy_encoder.py  utils.py  validate_yamls.py
